--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ bundler_args: --without development
 cache: bundler
 
 script:
+- $TRAVIS_TEST_RESULT
 - rspec spec/
+- echo $TRAVIS_TEST_RESULT
 - if [[ $TRAVIS_TEST_RESULT == 0 ]]; then echo 'sorry failed'; fi
 - if [[ $TRAVIS_TEST_RESULT == 0 ]]; then echo 'all good'; fi
